--- a/src/main/resources/templates/teacher/scoreAnalysis.html
+++ b/src/main/resources/templates/teacher/scoreAnalysis.html
@@ -127,6 +127,162 @@
     </div>
 
         <script type="text/javascript">
+            var app = {};
+            option = null;
+            app.configParameters = {
+                rotate: {
+                    min: -90,
+                    max: 90
+                },
+                align: {
+                    options: {
+                        left: 'left',
+                        center: 'center',
+                        right: 'right'
+                    }
+                },
+                verticalAlign: {
+                    options: {
+                        top: 'top',
+                        middle: 'middle',
+                        bottom: 'bottom'
+                    }
+                },
+                distance: {
+                    min: 0,
+                    max: 100
+                }
+            }
+
+            app.config = {
+                rotate: 0,
+                align: 'middle',
+                verticalAlign: 'middle',
+                position: 'top',
+                distance: 15,
+                onChange: function () {
+                    var labelOption = {
+                        normal: {
+                            rotate: app.config.rotate,
+                            align: app.config.align,
+                            verticalAlign: app.config.verticalAlign,
+                            position: app.config.position,
+                            distance: app.config.distance
+                        }
+                    };
+                    myChart.setOption({
+                        series: [{
+                            label: labelOption
+                        }, {
+                            label: labelOption
+                        }, {
+                            label: labelOption
+                        }, {
+                            label: labelOption
+                        }]
+                    });
+                }
+            }
+
+            var labelOption = {
+                normal: {
+                    show: true,
+                    position: app.config.position,
+                    distance: app.config.distance,
+                    align: app.config.align,
+                    verticalAlign: app.config.verticalAlign,
+                    rotate: app.config.rotate,
+                    fontSize: 16
+                }
+            }
+
+            $.get('/api/json/stats/overall_stats').done(function (data) {
+                var dom = document.getElementById("container2");
+                var myChart = echarts.init(dom);
+                var aver = [];
+                var time = [];
+                var num = [];
+                var maxscore = [];
+                var len = data.data.length;
+                for (var i = 0;i < len; i++){
+                    time.push(data.data[i].examTime);
+                    aver.push(data.data[i].avgGrades);
+                    num.push(data.data[i].count);
+                    maxscore.push(data.data[i].maxGrades);
+                }
+                myChart.setOption(
+                    option = {
+                        color: ['#006699', '#4cabce', '#e5323e'],
+                        tooltip: {
+                            trigger: 'axis',
+                            axisPointer: {
+                                type: 'shadow'
+                            }
+                        },
+                        legend: {
+                            data: ['平均分', '最高分', '大于300人数']
+                        },
+                        toolbox: {
+                            show: true,
+                            orient: 'vertical',
+                            left: 'right',
+                            top: 'center',
+                            feature: {
+                                mark: {
+                                    show: true
+                                },
+                                dataView: {
+                                    show: true,
+                                    readOnly: false
+                                },
+                                magicType: {
+                                    show: true,
+                                    type: ['line', 'bar', 'stack', 'tiled']
+                                },
+                                restore: {
+                                    show: true
+                                },
+                                saveAsImage: {
+                                    show: true
+                                }
+                            }
+                        },
+                        calculable: true,
+                        xAxis: [{
+                            type: 'category',
+                            axisTick: {
+                                show: false
+                            },
+                            data:time
+                        }],
+                        yAxis: [{
+                            type: 'value'
+                        }],
+                        series: [{
+                            name: '平均分',
+                            type: 'bar',
+                            barGap: 0,
+                            label: labelOption,
+                            data:aver
+                        },
+
+                            {
+                                name: '最高分',
+                                type: 'bar',
+                                label: labelOption,
+                                data:maxscore
+                            },
+                            {
+                                name: '大于300人数',
+                                type: 'bar',
+                                label: labelOption,
+                                data:num
+                            },
+                        ]
+                    }
+                );
+            });
+            /*
             var dom = document.getElementById("container2");
             var myChart = echarts.init(dom);
             var app = {};
@@ -272,7 +428,7 @@
             };;
             if (option && typeof option === "object") {
                 myChart.setOption(option, true);
-            }
+            }*/
         </script>
     </div>
     </div>
